# V-Finder

./: .gitignore  README.md  build.sh  cli_bridge.py  fix_main_js.py  fix_server.py  patch.diff  pyproject.toml  server.py  test_vfinder.py  test_vfinder_v2.py  verify_ui_2.js  verify_ui_3.js  verify_ui_4.py
claude_memory/: __init__.py  config.py
raycast/: package-lock.json  package.json  tsconfig.json
raycast/src/: open-memory.tsx  search-memory.tsx
tests/: test_ingest.py  test_search.py  test_store.py  test_utils.py
vector_embedded_finder/: config.py  embedder.py  ingest.py  search.py  store.py  utils.py
vfinder-cli/: Cargo.toml
vfinder-desktop/: package-lock.json  package.json
vfinder-desktop/src/: index.html  main.js  styles.css
vfinder-desktop/src-tauri/: Cargo.toml  tauri.conf.json
vfinder-desktop/src-tauri/capabilities/: default.json
vfinder-desktop/src-tauri/src/: lib.rs  main.rs
